Added users.json and CICD pipeline

--- a/error.html
+++ b/error.html
@@ -14,7 +14,7 @@
         <p>🤷‍♂️ Une erreur s'est produite !🤷‍♂️</p>
         <ul>
             <li>
-                <p>Le NAS est-il bien joignable ?</p>
+                <p>Le serveur est-il bien joignable ?</p>
             </li>
             <li>
                 <p>Le projet SVN n'existe-t-il pas déjà ?</p>
