Switched to Vite. Need to Dockerize properly. .env working in dev mode, not in prod

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <p>&copy; <span class="year"></span> <a href="https://www.polymorph.fr/home/" target="_blank">Polymorph</a></p> 
     </div>
 </footer>
-<script src="./src/scripts/healthCheck.js"></script>
-<script src="src/scripts/autoUpdate.js"></script>
-<script src="src/scripts/userCards.js"></script>
-<script src="src/scripts/createUserRepo.js"></script>
+<script src="./src/scripts/healthCheck.js" type="module"></script>
+<script src="src/scripts/autoUpdate.js" type="module"></script>
+<script src="src/scripts/userCards.js" type="module"></script>
+<script src="src/scripts/createUserRepo.js" type="module"></script>
 <script>
 // Get the current year
 const year = new Date().getFullYear();
