--- a/public/error.html
+++ b/public/error.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SVN Creator - Succès</title>
     <link rel="shortcut icon" href="src/img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="error.css">
 </head>
 <body>
     <div class="flex column">
