--- a/public/error.html
+++ b/public/error.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SVN Creator - Succès</title>
+    <title>SVN Creator - Erreur</title>
     <link rel="shortcut icon" href="src/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -25,7 +25,7 @@
 </body>
 <footer>
     <div class="container">
-        <p>&copy; <span id="year"></span> <a href="https://www.polymorph.fr/home/" target="_blank">Polymorph</a></p> 
+        <p>&copy; <span id="year"></span> <a href="https://www.kuentin.me/" target="_blank">Kuentin</a></p> 
     </div>
 </footer>
 <script>
