--- a/public/success.html
+++ b/public/success.html
@@ -17,7 +17,7 @@
 </body>
 <footer>
     <div class="container">
-        <p>&copy; <span id="year"></span> <a href="https://www.polymorph.fr/home/" target="_blank">Polymorph</a></p> 
+        <p>&copy; <span id="year"></span> <a href="https://www.kuentin.me" target="_blank">Kuentin</a></p> 
     </div>
 </footer>
 <script>
