--- a/index.html
+++ b/index.html
@@ -13,14 +13,10 @@
         <div class="name">
             <input type="text" id="repoName" class="name" placeholder="Nom du dépot SVN" required>
             <p class="name">Le lien du dépôt sera:</p>
-            <div id="display">svn://svn.polymorph.fr/<span class="year"></span>_</div>
+            <div id="display">svn://svn.kuentin.me/<span class="year"></span>_</div>
         </div>
         <hr>
         <div id="userCards" class="user-grid"></div>
-        <div class="file-lock" style="margin: 1rem;">
-            <input type="checkbox" id="fileLock" name="fileLock">
-            <label for="fileLock" style="font-weight: 400;">Activer le verrouillage de fichiers pour le dossier "Graph"</label>
-        </div>
         <button type="button" id="submit">Créer le dépôt</button>
         <div class="loading-overlay">
             <div class="loading-spinner"></div>
@@ -29,7 +25,7 @@
 </body>
 <footer>
     <div class="container">
-        <p>&copy; <span class="year"></span> <a href="https://www.polymorph.fr/home/" target="_blank">Polymorph</a></p> 
+        <p>&copy; <span class="year"></span> <a href="https://www.kuentin.me" target="_blank">Kuentin</a></p> 
     </div>
 </footer>
 <script src="./src/scripts/healthCheck.js" type="module"></script>
