Moved whole site to public directory

--- a/public/error.html
+++ b/public/error.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SVN Creator - Erreur</title>
-    <link rel="shortcut icon" href="src/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="flex column">
         <h1>SVN Creator</h1>
-        <img class="logo" src="/src/img/error-svgrepo-com.svg" alt="Echec">
+        <img class="logo" src="img/error-svgrepo-com.svg" alt="Echec">
         <p>🤷‍♂️ Une erreur s'est produite !🤷‍♂️</p>
         <ul>
             <li>
