Switched back index.html to original place

--- a/public/success.html
+++ b/public/success.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SVN Creator - Succès</title>
-    <link rel="shortcut icon" href="src/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="flex column">
         <h1>SVN Creator</h1>
-        <img class="logo" src="/src/img/success-svgrepo-com.svg" alt="Succès">
+        <img class="logo" src="img/success-svgrepo-com.svg" alt="Succès">
         <p>Le dépôt SVN a été créé avec succès !</p>
         <a href="index.html">Retour à la page d'accueil</a>
     </div>
